--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,14 +701,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
-        "outputId": "0771018c-5176-49f4-ca1d-b96283d5bf9d"
+        "outputId": "a3632425-8989-456b-d7ac-bb50dfa28882"
       },
       "outputs": [
         {
@@ -799,7 +799,8 @@
         "print(\"Cumulative GPA:\", student.cumGPA())\n",
         "print(\"Fall 2024 Semester GPA:\", student.semGPA(2024, \"Fall\"))\n",
         "print(\"Total Credits:\", student.credits())\n",
-        "print(\"Scholarship Status:\", student.scholarship())\n"
+        "print(\"Scholarship Status:\", student.scholarship())\n",
+        "\n"
       ]
     }
   ],
