--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,14 +701,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
-        "outputId": "a3632425-8989-456b-d7ac-bb50dfa28882"
+        "outputId": "217dbe58-19a7-4af6-ecf6-b96e72e18898"
       },
       "outputs": [
         {
@@ -725,7 +725,6 @@
       ],
       "source": [
         "#si-academic-record\n",
-        "\n",
         "class Course:\n",
         "    def __init__(self, course, year, semester, credits, grade):\n",
         "        self.course = course\n",
@@ -785,8 +784,9 @@
         "            return \"Not Eligible\"\n",
         "\n",
         "    def grade_to_points(self, grade):\n",
+        "        # Converts letter grades to points using a standard 4.0 scale\n",
         "        grade_scale = {'A': 4.0, 'B': 3.0, 'C': 2.0, 'D': 1.0, 'F': 0.0}\n",
-        "        return grade_scale.get(grade, 0)\n",
+        "        return grade_scale.get(grade.upper(), 0.0)  # Ensure the grade is uppercase\n",
         "\n",
         "# Example usage\n",
         "student = StudentRecord(\"John\", \"Doe\", \"2000-01-01\", \"Lincoln High\", \"Lincoln\", \"NE\", \"Computer Science\", \"1234 Elm St, Lincoln, NE\")\n",
@@ -800,6 +800,7 @@
         "print(\"Fall 2024 Semester GPA:\", student.semGPA(2024, \"Fall\"))\n",
         "print(\"Total Credits:\", student.credits())\n",
         "print(\"Scholarship Status:\", student.scholarship())\n",
+        "\n",
         "\n"
       ]
     }
