--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,14 +701,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
-        "outputId": "217dbe58-19a7-4af6-ecf6-b96e72e18898"
+        "outputId": "f78d2f46-d749-4a80-89af-1a16e99ffbf0"
       },
       "outputs": [
         {
@@ -725,6 +725,8 @@
       ],
       "source": [
         "#si-academic-record\n",
+        "\n",
+        "# Class to store course details\n",
         "class Course:\n",
         "    def __init__(self, course, year, semester, credits, grade):\n",
         "        self.course = course\n",
@@ -733,10 +735,11 @@
         "        self.credits = credits\n",
         "        self.grade = grade\n",
         "\n",
+        "    # String representation of a course for easy printing\n",
         "    def __repr__(self):\n",
         "        return f\"{self.course} ({self.year} {self.semester}): {self.credits} credits, Grade: {self.grade}\"\n",
         "\n",
-        "\n",
+        "# Class to store student academic information\n",
         "class StudentRecord:\n",
         "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address):\n",
         "        self.firstName = firstName\n",
@@ -747,8 +750,9 @@
         "        self.hsState = hsState\n",
         "        self.degree = degree\n",
         "        self.address = address\n",
-        "        self.transcript = []\n",
+        "        self.transcript = []  # This will store all the course details\n",
         "\n",
+        "    # Method to calculate cumulative GPA\n",
         "    def cumGPA(self):\n",
         "        total_points = 0\n",
         "        total_credits = 0\n",
@@ -757,6 +761,7 @@
         "            total_points += self.grade_to_points(course.grade) * course.credits\n",
         "        return total_points / total_credits if total_credits != 0 else 0\n",
         "\n",
+        "    # Method to calculate semester GPA\n",
         "    def semGPA(self, year, semester):\n",
         "        total_points = 0\n",
         "        total_credits = 0\n",
@@ -766,12 +771,15 @@
         "                total_points += self.grade_to_points(course.grade) * course.credits\n",
         "        return total_points / total_credits if total_credits != 0 else 0\n",
         "\n",
+        "    # Method to count total credits taken by the student\n",
         "    def credits(self):\n",
         "        return sum(course.credits for course in self.transcript)\n",
         "\n",
+        "    # Method to add a new course to the student's transcript\n",
         "    def newCourse(self, course, year, semester, credits, grade):\n",
         "        self.transcript.append(Course(course, year, semester, credits, grade))\n",
         "\n",
+        "    # Method to determine scholarship eligibility based on cumulative GPA\n",
         "    def scholarship(self):\n",
         "        gpa = self.cumGPA()\n",
         "        if gpa >= 3.9:\n",
@@ -783,26 +791,39 @@
         "        else:\n",
         "            return \"Not Eligible\"\n",
         "\n",
+        "    # Helper method to convert letter grades to grade points\n",
         "    def grade_to_points(self, grade):\n",
-        "        # Converts letter grades to points using a standard 4.0 scale\n",
         "        grade_scale = {'A': 4.0, 'B': 3.0, 'C': 2.0, 'D': 1.0, 'F': 0.0}\n",
-        "        return grade_scale.get(grade.upper(), 0.0)  # Ensure the grade is uppercase\n",
+        "        return grade_scale.get(grade.upper(), 0.0)\n",
         "\n",
         "# Example usage\n",
-        "student = StudentRecord(\"John\", \"Doe\", \"2000-01-01\", \"Lincoln High\", \"Lincoln\", \"NE\", \"Computer Science\", \"1234 Elm St, Lincoln, NE\")\n",
+        "student = StudentRecord(\n",
+        "    \"John\", \"Doe\", \"2000-01-01\", \"Lincoln High\", \"Lincoln\", \"NE\",\n",
+        "    \"Computer Science\", \"1234 Elm St, Lincoln, NE\"\n",
+        ")\n",
+        "\n",
+        "# Adding courses to the student's transcript\n",
         "student.newCourse(\"Math 101\", 2024, \"Fall\", 3, 'A')\n",
         "student.newCourse(\"English 101\", 2024, \"Fall\", 3, 'B')\n",
         "student.newCourse(\"History 101\", 2024, \"Spring\", 4, 'A')\n",
         "\n",
-        "# Testing methods\n",
-        "print(\"Transcript:\", student.transcript)\n",
-        "print(\"Cumulative GPA:\", student.cumGPA())\n",
-        "print(\"Fall 2024 Semester GPA:\", student.semGPA(2024, \"Fall\"))\n",
-        "print(\"Total Credits:\", student.credits())\n",
-        "print(\"Scholarship Status:\", student.scholarship())\n",
-        "\n",
-        "\n"
+        "# Testing the methods\n",
+        "print(\"Transcript:\", student.transcript)  # Print student's course transcript\n",
+        "print(\"Cumulative GPA:\", student.cumGPA())  # Print student's cumulative GPA\n",
+        "print(\"Fall 2024 Semester GPA:\", student.semGPA(2024, \"Fall\"))  # Print semester GPA for Fall 2024\n",
+        "print(\"Total Credits:\", student.credits())  # Print total credits earned\n",
+        "print(\"Scholarship Status:\", student.scholarship())  # Print scholarship eligibility\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TjEuqlQGa89_"
+      },
+      "id": "TjEuqlQGa89_",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
