--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,85 +701,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
-        "outputId": "f78d2f46-d749-4a80-89af-1a16e99ffbf0"
+        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Transcript: [Math 101 (2024 Fall): 3 credits, Grade: A, English 101 (2024 Fall): 3 credits, Grade: B, History 101 (2024 Spring): 4 credits, Grade: A]\n",
-            "Cumulative GPA: 3.7\n",
-            "Fall 2024 Semester GPA: 3.5\n",
-            "Total Credits: 10\n",
-            "Scholarship Status: Half-tuition\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-academic-record\n",
         "\n",
-        "# Class to store course details\n",
         "class Course:\n",
-        "    def __init__(self, course, year, semester, credits, grade):\n",
-        "        self.course = course\n",
+        "    def __init__(self, course_name, year, semester, credits, grade):\n",
+        "        self.course_name = course_name\n",
         "        self.year = year\n",
         "        self.semester = semester\n",
         "        self.credits = credits\n",
         "        self.grade = grade\n",
         "\n",
-        "    # String representation of a course for easy printing\n",
-        "    def __repr__(self):\n",
-        "        return f\"{self.course} ({self.year} {self.semester}): {self.credits} credits, Grade: {self.grade}\"\n",
-        "\n",
-        "# Class to store student academic information\n",
         "class StudentRecord:\n",
-        "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address):\n",
-        "        self.firstName = firstName\n",
-        "        self.lastName = lastName\n",
+        "    def __init__(self, first_name, last_name, dob, hs_name, hs_city, hs_state, degree, address):\n",
+        "        self.first_name = first_name\n",
+        "        self.last_name = last_name\n",
         "        self.dob = dob\n",
-        "        self.hsName = hsName\n",
-        "        self.hsCity = hsCity\n",
-        "        self.hsState = hsState\n",
+        "        self.hs_name = hs_name\n",
+        "        self.hs_city = hs_city\n",
+        "        self.hs_state = hs_state\n",
         "        self.degree = degree\n",
         "        self.address = address\n",
-        "        self.transcript = []  # This will store all the course details\n",
+        "        self.transcript = []\n",
         "\n",
-        "    # Method to calculate cumulative GPA\n",
         "    def cumGPA(self):\n",
         "        total_points = 0\n",
         "        total_credits = 0\n",
         "        for course in self.transcript:\n",
+        "            grade_points = self._grade_to_points(course.grade)\n",
+        "            total_points += grade_points * course.credits\n",
         "            total_credits += course.credits\n",
-        "            total_points += self.grade_to_points(course.grade) * course.credits\n",
-        "        return total_points / total_credits if total_credits != 0 else 0\n",
+        "        return total_points / total_credits if total_credits > 0 else 0.0\n",
         "\n",
-        "    # Method to calculate semester GPA\n",
-        "    def semGPA(self, year, semester):\n",
+        "    def semGPA(self):\n",
         "        total_points = 0\n",
         "        total_credits = 0\n",
+        "        current_year = 2024  # Change to current year if needed\n",
+        "        current_semester = 'Fall'  # Change to current semester if needed\n",
         "        for course in self.transcript:\n",
-        "            if course.year == year and course.semester == semester:\n",
+        "            if course.year == current_year and course.semester == current_semester:\n",
+        "                grade_points = self._grade_to_points(course.grade)\n",
+        "                total_points += grade_points * course.credits\n",
         "                total_credits += course.credits\n",
-        "                total_points += self.grade_to_points(course.grade) * course.credits\n",
-        "        return total_points / total_credits if total_credits != 0 else 0\n",
+        "        return total_points / total_credits if total_credits > 0 else 0.0\n",
         "\n",
-        "    # Method to count total credits taken by the student\n",
         "    def credits(self):\n",
-        "        return sum(course.credits for course in self.transcript)\n",
+        "        total_credits = 0\n",
+        "        for course in self.transcript:\n",
+        "            total_credits += course.credits\n",
+        "        return float(total_credits)\n",
         "\n",
-        "    # Method to add a new course to the student's transcript\n",
-        "    def newCourse(self, course, year, semester, credits, grade):\n",
-        "        self.transcript.append(Course(course, year, semester, credits, grade))\n",
+        "    def newCourse(self, course_name, year, semester, credits, grade):\n",
+        "        new_course = Course(course_name, year, semester, credits, grade)\n",
+        "        self.transcript.append(new_course)\n",
         "\n",
-        "    # Method to determine scholarship eligibility based on cumulative GPA\n",
         "    def scholarship(self):\n",
         "        gpa = self.cumGPA()\n",
         "        if gpa >= 3.9:\n",
@@ -791,28 +772,22 @@
         "        else:\n",
         "            return \"Not Eligible\"\n",
         "\n",
-        "    # Helper method to convert letter grades to grade points\n",
-        "    def grade_to_points(self, grade):\n",
-        "        grade_scale = {'A': 4.0, 'B': 3.0, 'C': 2.0, 'D': 1.0, 'F': 0.0}\n",
-        "        return grade_scale.get(grade.upper(), 0.0)\n",
-        "\n",
-        "# Example usage\n",
-        "student = StudentRecord(\n",
-        "    \"John\", \"Doe\", \"2000-01-01\", \"Lincoln High\", \"Lincoln\", \"NE\",\n",
-        "    \"Computer Science\", \"1234 Elm St, Lincoln, NE\"\n",
-        ")\n",
-        "\n",
-        "# Adding courses to the student's transcript\n",
-        "student.newCourse(\"Math 101\", 2024, \"Fall\", 3, 'A')\n",
-        "student.newCourse(\"English 101\", 2024, \"Fall\", 3, 'B')\n",
-        "student.newCourse(\"History 101\", 2024, \"Spring\", 4, 'A')\n",
-        "\n",
-        "# Testing the methods\n",
-        "print(\"Transcript:\", student.transcript)  # Print student's course transcript\n",
-        "print(\"Cumulative GPA:\", student.cumGPA())  # Print student's cumulative GPA\n",
-        "print(\"Fall 2024 Semester GPA:\", student.semGPA(2024, \"Fall\"))  # Print semester GPA for Fall 2024\n",
-        "print(\"Total Credits:\", student.credits())  # Print total credits earned\n",
-        "print(\"Scholarship Status:\", student.scholarship())  # Print scholarship eligibility\n"
+        "    def _grade_to_points(self, grade):\n",
+        "        grade_points = {\n",
+        "            'A': 4.0,\n",
+        "            'A-': 3.7,\n",
+        "            'B+': 3.3,\n",
+        "            'B': 3.0,\n",
+        "            'B-': 2.7,\n",
+        "            'C+': 2.3,\n",
+        "            'C': 2.0,\n",
+        "            'C-': 1.7,\n",
+        "            'D+': 1.3,\n",
+        "            'D': 1.0,\n",
+        "            'F': 0.0\n",
+        "        }\n",
+        "        return grade_points.get(grade, 0.0)\n",
+        "\n"
       ]
     },
     {
