--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,12 +701,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
-        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
+        "outputId": "5345ea25-4e0c-43b5-b82b-2a67a0bcda6d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cumulative GPA: 3.6\n",
+            "Semester GPA: 3.6\n",
+            "Total Credits: 7.0\n",
+            "Scholarship: Quarter-tuition\n"
+          ]
+        }
+      ],
       "source": [
         "#si-academic-record\n",
         "\n",
@@ -787,7 +802,18 @@
         "            'F': 0.0\n",
         "        }\n",
         "        return grade_points.get(grade, 0.0)\n",
-        "\n"
+        "\n",
+        "# Example usage\n",
+        "student = StudentRecord(\n",
+        "    \"John\", \"Doe\", \"2000-01-01\", \"Lincoln High\", \"Lincoln\", \"NE\", \"Computer Science\", \"123 Main St, Lincoln, NE\"\n",
+        ")\n",
+        "student.newCourse(\"CS101\", 2024, \"Fall\", 3, \"A\")\n",
+        "student.newCourse(\"MATH101\", 2024, \"Fall\", 4, \"B+\")\n",
+        "\n",
+        "print(\"Cumulative GPA:\", student.cumGPA())\n",
+        "print(\"Semester GPA:\", student.semGPA())\n",
+        "print(\"Total Credits:\", student.credits())\n",
+        "print(\"Scholarship:\", student.scholarship())\n"
       ]
     },
     {
