--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,14 +701,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
-        "outputId": "5345ea25-4e0c-43b5-b82b-2a67a0bcda6d"
+        "outputId": "5af2430c-7d0c-4524-9dff-8dabfa6d680d"
       },
       "outputs": [
         {
@@ -716,7 +716,7 @@
           "name": "stdout",
           "text": [
             "Cumulative GPA: 3.6\n",
-            "Semester GPA: 3.6\n",
+            "Semester GPA (Fall 2024): 3.6\n",
             "Total Credits: 7.0\n",
             "Scholarship: Quarter-tuition\n"
           ]
@@ -754,13 +754,11 @@
         "            total_credits += course.credits\n",
         "        return total_points / total_credits if total_credits > 0 else 0.0\n",
         "\n",
-        "    def semGPA(self):\n",
+        "    def semGPA(self, year, semester):\n",
         "        total_points = 0\n",
         "        total_credits = 0\n",
-        "        current_year = 2024  # Change to current year if needed\n",
-        "        current_semester = 'Fall'  # Change to current semester if needed\n",
         "        for course in self.transcript:\n",
-        "            if course.year == current_year and course.semester == current_semester:\n",
+        "            if course.year == year and course.semester == semester:\n",
         "                grade_points = self._grade_to_points(course.grade)\n",
         "                total_points += grade_points * course.credits\n",
         "                total_credits += course.credits\n",
@@ -811,7 +809,7 @@
         "student.newCourse(\"MATH101\", 2024, \"Fall\", 4, \"B+\")\n",
         "\n",
         "print(\"Cumulative GPA:\", student.cumGPA())\n",
-        "print(\"Semester GPA:\", student.semGPA())\n",
+        "print(\"Semester GPA (Fall 2024):\", student.semGPA(2024, \"Fall\"))\n",
         "print(\"Total Credits:\", student.credits())\n",
         "print(\"Scholarship:\", student.scholarship())\n"
       ]
