--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,14 +701,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
-        "outputId": "5af2430c-7d0c-4524-9dff-8dabfa6d680d"
+        "outputId": "5ba18a4d-6d38-4f50-9653-181fc927a6e7"
       },
       "outputs": [
         {
@@ -716,7 +716,7 @@
           "name": "stdout",
           "text": [
             "Cumulative GPA: 3.6\n",
-            "Semester GPA (Fall 2024): 3.6\n",
+            "Semester GPA: 3.6\n",
             "Total Credits: 7.0\n",
             "Scholarship: Quarter-tuition\n"
           ]
@@ -746,29 +746,31 @@
         "        self.transcript = []\n",
         "\n",
         "    def cumGPA(self):\n",
-        "        total_points = 0\n",
-        "        total_credits = 0\n",
+        "        total_points = 0.0\n",
+        "        total_credits = 0.0\n",
         "        for course in self.transcript:\n",
         "            grade_points = self._grade_to_points(course.grade)\n",
         "            total_points += grade_points * course.credits\n",
         "            total_credits += course.credits\n",
         "        return total_points / total_credits if total_credits > 0 else 0.0\n",
         "\n",
-        "    def semGPA(self, year, semester):\n",
-        "        total_points = 0\n",
-        "        total_credits = 0\n",
+        "    def semGPA(self):\n",
+        "        total_points = 0.0\n",
+        "        total_credits = 0.0\n",
+        "        current_year = 2024  # Replace with the current year\n",
+        "        current_semester = 'Fall'  # Replace with the current semester\n",
         "        for course in self.transcript:\n",
-        "            if course.year == year and course.semester == semester:\n",
+        "            if course.year == current_year and course.semester == current_semester:\n",
         "                grade_points = self._grade_to_points(course.grade)\n",
         "                total_points += grade_points * course.credits\n",
         "                total_credits += course.credits\n",
         "        return total_points / total_credits if total_credits > 0 else 0.0\n",
         "\n",
         "    def credits(self):\n",
-        "        total_credits = 0\n",
+        "        total_credits = 0.0\n",
         "        for course in self.transcript:\n",
         "            total_credits += course.credits\n",
-        "        return float(total_credits)\n",
+        "        return total_credits\n",
         "\n",
         "    def newCourse(self, course_name, year, semester, credits, grade):\n",
         "        new_course = Course(course_name, year, semester, credits, grade)\n",
@@ -809,7 +811,7 @@
         "student.newCourse(\"MATH101\", 2024, \"Fall\", 4, \"B+\")\n",
         "\n",
         "print(\"Cumulative GPA:\", student.cumGPA())\n",
-        "print(\"Semester GPA (Fall 2024):\", student.semGPA(2024, \"Fall\"))\n",
+        "print(\"Semester GPA:\", student.semGPA())\n",
         "print(\"Total Credits:\", student.credits())\n",
         "print(\"Scholarship:\", student.scholarship())\n"
       ]
