--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,81 +701,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
-        "outputId": "5ba18a4d-6d38-4f50-9653-181fc927a6e7"
+        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cumulative GPA: 3.6\n",
-            "Semester GPA: 3.6\n",
-            "Total Credits: 7.0\n",
-            "Scholarship: Quarter-tuition\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-academic-record\n",
         "\n",
+        "# Class to store information about each course\n",
         "class Course:\n",
-        "    def __init__(self, course_name, year, semester, credits, grade):\n",
-        "        self.course_name = course_name\n",
+        "    def __init__(self, course, year, semester, credits, grade):\n",
+        "        self.course = course\n",
         "        self.year = year\n",
         "        self.semester = semester\n",
         "        self.credits = credits\n",
         "        self.grade = grade\n",
         "\n",
+        "# Class to store student academic information\n",
         "class StudentRecord:\n",
-        "    def __init__(self, first_name, last_name, dob, hs_name, hs_city, hs_state, degree, address):\n",
-        "        self.first_name = first_name\n",
-        "        self.last_name = last_name\n",
+        "    # Initialize the StudentRecord class with the given attributes\n",
+        "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address):\n",
+        "        self.firstName = firstName\n",
+        "        self.lastName = lastName\n",
         "        self.dob = dob\n",
-        "        self.hs_name = hs_name\n",
-        "        self.hs_city = hs_city\n",
-        "        self.hs_state = hs_state\n",
+        "        self.hsName = hsName\n",
+        "        self.hsCity = hsCity\n",
+        "        self.hsState = hsState\n",
         "        self.degree = degree\n",
         "        self.address = address\n",
         "        self.transcript = []\n",
         "\n",
+        "    # Method to calculate cumulative GPA\n",
         "    def cumGPA(self):\n",
         "        total_points = 0.0\n",
         "        total_credits = 0.0\n",
         "        for course in self.transcript:\n",
-        "            grade_points = self._grade_to_points(course.grade)\n",
-        "            total_points += grade_points * course.credits\n",
+        "            total_points += self._grade_to_points(course.grade) * course.credits\n",
         "            total_credits += course.credits\n",
-        "        return total_points / total_credits if total_credits > 0 else 0.0\n",
+        "        return round(total_points / total_credits, 2) if total_credits > 0 else 0.0\n",
         "\n",
-        "    def semGPA(self):\n",
+        "    # Method to calculate semester GPA\n",
+        "    def semGPA(self, year, semester):\n",
         "        total_points = 0.0\n",
         "        total_credits = 0.0\n",
-        "        current_year = 2024  # Replace with the current year\n",
-        "        current_semester = 'Fall'  # Replace with the current semester\n",
         "        for course in self.transcript:\n",
-        "            if course.year == current_year and course.semester == current_semester:\n",
-        "                grade_points = self._grade_to_points(course.grade)\n",
-        "                total_points += grade_points * course.credits\n",
+        "            if course.year == year and course.semester.lower() == semester.lower():\n",
+        "                total_points += self._grade_to_points(course.grade) * course.credits\n",
         "                total_credits += course.credits\n",
-        "        return total_points / total_credits if total_credits > 0 else 0.0\n",
+        "        return round(total_points / total_credits, 2) if total_credits > 0 else 0.0\n",
         "\n",
+        "    # Method to count total credits accumulated\n",
         "    def credits(self):\n",
-        "        total_credits = 0.0\n",
-        "        for course in self.transcript:\n",
-        "            total_credits += course.credits\n",
-        "        return total_credits\n",
+        "        return sum(course.credits for course in self.transcript)\n",
         "\n",
-        "    def newCourse(self, course_name, year, semester, credits, grade):\n",
-        "        new_course = Course(course_name, year, semester, credits, grade)\n",
+        "    # Method to add a new course to the transcript\n",
+        "    def newCourse(self, course, year, semester, credits, grade):\n",
+        "        new_course = Course(course, year, semester, credits, grade)\n",
         "        self.transcript.append(new_course)\n",
         "\n",
+        "    # Method to determine scholarship eligibility based on cumulative GPA\n",
         "    def scholarship(self):\n",
         "        gpa = self.cumGPA()\n",
         "        if gpa >= 3.9:\n",
@@ -787,8 +773,9 @@
         "        else:\n",
         "            return \"Not Eligible\"\n",
         "\n",
+        "    # Helper method to convert grades to grade points\n",
         "    def _grade_to_points(self, grade):\n",
-        "        grade_points = {\n",
+        "        grade_scale = {\n",
         "            'A': 4.0,\n",
         "            'A-': 3.7,\n",
         "            'B+': 3.3,\n",
@@ -801,19 +788,8 @@
         "            'D': 1.0,\n",
         "            'F': 0.0\n",
         "        }\n",
-        "        return grade_points.get(grade, 0.0)\n",
-        "\n",
-        "# Example usage\n",
-        "student = StudentRecord(\n",
-        "    \"John\", \"Doe\", \"2000-01-01\", \"Lincoln High\", \"Lincoln\", \"NE\", \"Computer Science\", \"123 Main St, Lincoln, NE\"\n",
-        ")\n",
-        "student.newCourse(\"CS101\", 2024, \"Fall\", 3, \"A\")\n",
-        "student.newCourse(\"MATH101\", 2024, \"Fall\", 4, \"B+\")\n",
-        "\n",
-        "print(\"Cumulative GPA:\", student.cumGPA())\n",
-        "print(\"Semester GPA:\", student.semGPA())\n",
-        "print(\"Total Credits:\", student.credits())\n",
-        "print(\"Scholarship:\", student.scholarship())\n"
+        "        return grade_scale.get(grade, 0.0)\n",
+        "\n"
       ]
     },
     {
