--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,27 +701,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
-        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
+        "outputId": "ffc46461-6630-4dd9-d2d3-1ef0bdc94fa4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cumulative GPA: 3.42\n",
+            "Semester GPA (Fall 2023): 3.6\n",
+            "Total Credits: 10\n",
+            "Scholarship Eligibility: Quarter-tuition\n"
+          ]
+        }
+      ],
       "source": [
         "#si-academic-record\n",
-        "\n",
-        "# Class to store information about each course\n",
+        "# Class to represent individual courses in the transcript\n",
         "class Course:\n",
         "    def __init__(self, course, year, semester, credits, grade):\n",
-        "        self.course = course\n",
-        "        self.year = year\n",
-        "        self.semester = semester\n",
-        "        self.credits = credits\n",
-        "        self.grade = grade\n",
+        "        self.course = course        # Course name\n",
+        "        self.year = year            # Year taken\n",
+        "        self.semester = semester    # Semester taken (e.g., Fall, Spring)\n",
+        "        self.credits = credits      # Credits assigned to the course\n",
+        "        self.grade = grade          # Grade received in the course\n",
         "\n",
-        "# Class to store student academic information\n",
+        "# Class to represent a student's academic record\n",
         "class StudentRecord:\n",
-        "    # Initialize the StudentRecord class with the given attributes\n",
+        "    # Initialize the student record with the required attributes\n",
         "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address):\n",
         "        self.firstName = firstName\n",
         "        self.lastName = lastName\n",
@@ -731,7 +745,7 @@
         "        self.hsState = hsState\n",
         "        self.degree = degree\n",
         "        self.address = address\n",
-        "        self.transcript = []\n",
+        "        self.transcript = []  # Empty list to store courses\n",
         "\n",
         "    # Method to calculate cumulative GPA\n",
         "    def cumGPA(self):\n",
@@ -789,6 +803,17 @@
         "            'F': 0.0\n",
         "        }\n",
         "        return grade_scale.get(grade, 0.0)\n",
+        "\n",
+        "# Example usage:\n",
+        "student = StudentRecord(\"Alice\", \"Johnson\", \"2002-08-12\", \"Green Valley High\", \"Las Vegas\", \"NV\", \"Biology\", \"456 Elm St\")\n",
+        "student.newCourse(\"Biology 101\", 2023, \"Fall\", 3, \"A\")\n",
+        "student.newCourse(\"Math 101\", 2023, \"Fall\", 4, \"B+\")\n",
+        "student.newCourse(\"History 101\", 2023, \"Spring\", 3, \"B\")\n",
+        "print(\"Cumulative GPA:\", student.cumGPA())  # Output should be the cumulative GPA\n",
+        "print(\"Semester GPA (Fall 2023):\", student.semGPA(2023, \"Fall\"))  # Output should be the GPA for Fall 2023\n",
+        "print(\"Total Credits:\", student.credits())  # Output should be the total number of credits accumulated\n",
+        "print(\"Scholarship Eligibility:\", student.scholarship())  # Output should be the scholarship eligibility\n",
+        "\n",
         "\n"
       ]
     },
