--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -560,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "ff828581-99ed-444e-80eb-05f2842d1e12",
       "metadata": {
         "colab": {
@@ -701,41 +701,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
-        "outputId": "ffc46461-6630-4dd9-d2d3-1ef0bdc94fa4"
+        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cumulative GPA: 3.42\n",
-            "Semester GPA (Fall 2023): 3.6\n",
-            "Total Credits: 10\n",
-            "Scholarship Eligibility: Quarter-tuition\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-academic-record\n",
-        "# Class to represent individual courses in the transcript\n",
+        "\n",
         "class Course:\n",
         "    def __init__(self, course, year, semester, credits, grade):\n",
-        "        self.course = course        # Course name\n",
-        "        self.year = year            # Year taken\n",
-        "        self.semester = semester    # Semester taken (e.g., Fall, Spring)\n",
-        "        self.credits = credits      # Credits assigned to the course\n",
-        "        self.grade = grade          # Grade received in the course\n",
+        "        self.course = course\n",
+        "        self.year = year\n",
+        "        self.semester = semester\n",
+        "        self.credits = credits\n",
+        "        self.grade = grade\n",
         "\n",
-        "# Class to represent a student's academic record\n",
+        "\n",
         "class StudentRecord:\n",
-        "    # Initialize the student record with the required attributes\n",
         "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address):\n",
         "        self.firstName = firstName\n",
         "        self.lastName = lastName\n",
@@ -745,37 +729,31 @@
         "        self.hsState = hsState\n",
         "        self.degree = degree\n",
         "        self.address = address\n",
-        "        self.transcript = []  # Empty list to store courses\n",
+        "        self.transcript = []\n",
         "\n",
-        "    # Method to calculate cumulative GPA\n",
-        "    def cumGPA(self):\n",
-        "        total_points = 0.0\n",
-        "        total_credits = 0.0\n",
-        "        for course in self.transcript:\n",
-        "            total_points += self._grade_to_points(course.grade) * course.credits\n",
-        "            total_credits += course.credits\n",
-        "        return round(total_points / total_credits, 2) if total_credits > 0 else 0.0\n",
-        "\n",
-        "    # Method to calculate semester GPA\n",
-        "    def semGPA(self, year, semester):\n",
-        "        total_points = 0.0\n",
-        "        total_credits = 0.0\n",
-        "        for course in self.transcript:\n",
-        "            if course.year == year and course.semester.lower() == semester.lower():\n",
-        "                total_points += self._grade_to_points(course.grade) * course.credits\n",
-        "                total_credits += course.credits\n",
-        "        return round(total_points / total_credits, 2) if total_credits > 0 else 0.0\n",
-        "\n",
-        "    # Method to count total credits accumulated\n",
-        "    def credits(self):\n",
-        "        return sum(course.credits for course in self.transcript)\n",
-        "\n",
-        "    # Method to add a new course to the transcript\n",
         "    def newCourse(self, course, year, semester, credits, grade):\n",
         "        new_course = Course(course, year, semester, credits, grade)\n",
         "        self.transcript.append(new_course)\n",
         "\n",
-        "    # Method to determine scholarship eligibility based on cumulative GPA\n",
+        "    def credits(self):\n",
+        "        total_credits = sum([course.credits for course in self.transcript])\n",
+        "        return total_credits\n",
+        "\n",
+        "    def cumGPA(self):\n",
+        "        total_points = sum([course.grade * course.credits for course in self.transcript])\n",
+        "        total_credits = self.credits()\n",
+        "        if total_credits == 0:\n",
+        "            return 0.0\n",
+        "        return total_points / total_credits\n",
+        "\n",
+        "    def semGPA(self, year, semester):\n",
+        "        courses = [course for course in self.transcript if course.year == year and course.semester == semester]\n",
+        "        total_points = sum([course.grade * course.credits for course in courses])\n",
+        "        total_credits = sum([course.credits for course in courses])\n",
+        "        if total_credits == 0:\n",
+        "            return 0.0\n",
+        "        return total_points / total_credits\n",
+        "\n",
         "    def scholarship(self):\n",
         "        gpa = self.cumGPA()\n",
         "        if gpa >= 3.9:\n",
@@ -786,23 +764,6 @@
         "            return \"Quarter-tuition\"\n",
         "        else:\n",
         "            return \"Not Eligible\"\n",
-        "\n",
-        "    # Helper method to convert grades to grade points\n",
-        "    def _grade_to_points(self, grade):\n",
-        "        grade_scale = {\n",
-        "            'A': 4.0,\n",
-        "            'A-': 3.7,\n",
-        "            'B+': 3.3,\n",
-        "            'B': 3.0,\n",
-        "            'B-': 2.7,\n",
-        "            'C+': 2.3,\n",
-        "            'C': 2.0,\n",
-        "            'C-': 1.7,\n",
-        "            'D+': 1.3,\n",
-        "            'D': 1.0,\n",
-        "            'F': 0.0\n",
-        "        }\n",
-        "        return grade_scale.get(grade, 0.0)\n",
         "\n",
         "\n"
       ]
